--- a/public/style.css
+++ b/public/style.css
@@ -103,3 +103,12 @@ form.create-note button {
   cursor: pointer;
   outline: none;
 }
+
+.quote {
+  position: absolute;
+  bottom: 60px;
+  width: 100%;
+  text-align: center;
+  color: white;
+  text-decoration: underline;
+}
